Fixing ve toolbar z-index

--- a/skins/PageForms.css
+++ b/skins/PageForms.css
@@ -165,10 +165,6 @@ form input.formInput,
 	border-radius: 0 0px 3px 3px;
 }
 
-.ve-ui-toolbar {
-	z-index:0;
-}
-
 .ve-area-wrapper .oo-ui-toolbar-bar .oo-ui-tool-name-vefpgSwitchEditor .oo-ui-tool-link{
 	padding: 9.5px;
 	width: 40px;
